fixed wrapping tweet text

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -114,6 +114,7 @@ ul.nav.nav-pills {
   color: #A7ACB0;
 }
 .tableMain table td{
+  word-wrap: break-word;
   padding: 20px 10px !important;
 }
 table td:nth-child(1){
